# todo-extract

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
tests/: test_todo_extract.py
todo_extract/: __init__.py  core.py
